TinyPedal 1.1.11 (2022-05-03)
----------------------------
* Core
    - Added APP running status check when starts TinyPedal,
      and shows notify & closes APP to prevent multiple TinyPedal APP from running at same time.
    - Removed additional player index code that freezes data reading in rare cases.
    - Removed duplicated calls to playersDriverNum() method.
    - Removed unnecessary method from deltatime module.

TinyPedal 1.1.10 (2022-04-19)
----------------------------
* Core
    - Fixed shared memory access issue that freezes APP when a player leaves server in multiplayer session.
    - Improved relative calculation code.

TinyPedal 1.1.9 (2022-04-18)
----------------------------
* Relative
    - Fixed a player index mismatch issue that happens in multiplayer session when a player leaves server,
      which interrupts Relative data calculation and halt APP.

* Core
    - Improved setting code, removed unnecessary setting groups.
    - Optimized widget code structure, removed redundant codes, easier to create new widget.
    - Simplified widget module import method, removed repetitive references.
    - Improved setting auto-sorting, moved "overlay" setting back to the top of the JSON file.

TinyPedal 1.1.8 (2022-04-17)
----------------------------
* Relative
    - [New]Show driver's position standing in class.
    - [New]Show pit status indicator whether driver is currently in pit, with customizable pit status text.
    - [New]Customizable column info display order.
    - "bar_driver_name_width" setting now trims out range chars.
    - Removed unnecessary laptime formatting, added string length slicing

* Core
    - [New]Add new "veh_class_info_list" algorithm to calculate position in class.
    - Moved place & class info to "veh_class_info_list".
    - Various code clean up.

* Misc
    - Updated customization guide with new configurable setting.
    - Updated features list.

TinyPedal 1.1.7 (2022-04-16)
----------------------------
* Relative