@@ -132,12 +132,23 @@ class DrawWidget(Widget, MouseEvent):
             # Tyre load & pressure update
             if self.cfg["show_tyre_load"]:
                 # Read tyre load data
-                load_fl, load_fr, load_rl, load_rr = read_data.tyre_load()
+                raw_load_fl, raw_load_fr, raw_load_rl, raw_load_rr = read_data.tyre_load()
 
-                self.bar_load_fl.config(text=f"{load_fl:.0f}")
-                self.bar_load_fr.config(text=f"{load_fr:.0f}")
-                self.bar_load_rl.config(text=f"{load_rl:.0f}")
-                self.bar_load_rr.config(text=f"{load_rr:.0f}")
+                if self.cfg["show_tyre_load_ratio"]:
+                    load_fl = calc.force_ratio(raw_load_fl, raw_load_fr)
+                    load_fr = calc.force_ratio(raw_load_fr, raw_load_fl)
+                    load_rl = calc.force_ratio(raw_load_rl, raw_load_rr)
+                    load_rr = calc.force_ratio(raw_load_rr, raw_load_rl)
+
+                    self.bar_load_fl.config(text=f"{load_fl:.1f}")
+                    self.bar_load_fr.config(text=f"{load_fr:.1f}")
+                    self.bar_load_rl.config(text=f"{load_rl:.1f}")
+                    self.bar_load_rr.config(text=f"{load_rr:.1f}")
+                else:
+                    self.bar_load_fl.config(text=f"{raw_load_fl:.0f}")
+                    self.bar_load_fr.config(text=f"{raw_load_fr:.0f}")
+                    self.bar_load_rl.config(text=f"{raw_load_rl:.0f}")
+                    self.bar_load_rr.config(text=f"{raw_load_rr:.0f}")
 
             self.bar_pres_fl.config(text=pres_fl)
             self.bar_pres_fr.config(text=pres_fr)
